--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,23 @@
 </head>
 <body>
 
+  <h1>Active Microsites</h1>
+
   <table id="micrositeListTable" class="table table-striped table-bordered">
+  <thead>
+    <th><i class="icon-th"></i></th>
+    <th><i class="icon-star"></i>&nbsp;Site Name</th>
+    <th><i class="icon-calendar"></i>&nbsp;Date</th>
+    <th><i class="icon-edit"></i>&nbsp;Preview</th>
+    <th><i class="icon-check"></i>&nbsp;Published</th>
+  </thead>
+  <tbody>
+  </tbody>
+  </table>
+
+  <h1>Retired Microsites</h1>
+
+  <table id="micrositeListTableRetired" class="table table-striped table-bordered retired">
   <thead>
     <th><i class="icon-th"></i></th>
     <th><i class="icon-star"></i>&nbsp;Site Name</th>
@@ -34,6 +50,9 @@
       var list = getMicrositeList();
       var arr = [];
       var rows = '';
+      var rowsRetired = '';
+      var num = 0;
+      var numRetired = 0;
       var created;
       var ifEmbedded = '';
 
@@ -48,18 +67,48 @@
 
         // iterrate through json and build table rows
         for (var i = 0, len = arr.length; i < len; i++) {
-          ifEmbedded = (items[ arr[i] ].isEmbedded) ? 'embedded.html' : 'index.html';
-          created = new Date(items[ arr[i] ].added);
-          rows += '<tr>'
-          rows += '<td>' + (i+1) + '</td>'
-          rows += '<td><a href="/sites/' + items[ arr[i] ].foldername + '/' + ifEmbedded + '">' + arr[i] + '</a></td>';
-          rows += '<td>' + created.getFullYear() + '.' + (created.getMonth() + 1) + '.' + (created.getDate() + 1) + '</td>';
-          rows += '<td><a href="' + items[ arr[i] ].urlPreview + '">' + items[ arr[i] ].urlPreview + '</a></td>';
-          rows += '<td><a href="' + items[ arr[i] ].url + '">' + items[ arr[i] ].url + '</a></td>';
-          rows += '</tr>';
+
+          // filter out "inactive" sites
+          if (items[ arr[i] ].isActive) {
+
+            ifEmbedded = (items[ arr[i] ].isEmbedded) ? 'embedded.html' : 'index.html';
+
+            created = new Date(items[ arr[i] ].added);
+
+            rows += '<tr>' +
+                    '<td>' + (num+1) + '</td>' +
+                    '<td><a href="/sites/' + items[ arr[i] ].foldername + '/' + ifEmbedded + '">' + arr[i] + '</a></td>' +
+                    '<td>' + created.getFullYear() + '.' + (created.getMonth() + 1) + '.' + (created.getDate() + 1) + '</td>' +
+                    '<td><a href="' + items[ arr[i] ].urlPreview + '">' + items[ arr[i] ].urlPreview + '</a></td>' +
+                    '<td><a href="' + items[ arr[i] ].url + '">' + items[ arr[i] ].url + '</a></td>' +
+                    '</tr>';
+
+            num++;
+
+          } else {
+
+
+            ifEmbedded = (items[ arr[i] ].isEmbedded) ? 'embedded.html' : 'index.html';
+
+            created = new Date(items[ arr[i] ].added);
+
+            rowsRetired += '<tr>' +
+                    '<td>' + (numRetired+1) + '</td>' +
+                    '<td><a href="/sites/' + items[ arr[i] ].foldername + '/' + ifEmbedded + '">' + arr[i] + '</a></td>' +
+                    '<td>' + created.getFullYear() + '.' + (created.getMonth() + 1) + '.' + (created.getDate() + 1) + '</td>' +
+                    '<td><a href="' + items[ arr[i] ].urlPreview + '">' + items[ arr[i] ].urlPreview + '</a></td>' +
+                    '<td><a href="' + items[ arr[i] ].url + '">' + items[ arr[i] ].url + '</a></td>' +
+                    '</tr>';
+
+            numRetired++;
+
+          }
+
         }
 
         $('#micrositeListTable').append(rows);
+
+        $('#micrositeListTableRetired').append(rowsRetired);
 
       });
 
