updated microsite list table js & css

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,11 @@
 
         $('#micrositeListTableRetired').append(rowsRetired);
 
+        $('#micrositeListTable, #micrositeListTableRetired').on('click', 'td', function (e) {
+          e.preventDefault();
+          window.open( $(this).children('a').attr('href') );
+        });
+
       });
 
     });
