added handlebar templates & sorting to list table

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
             createDate: moment( new Date(items[ arr[i] ].added) ).format('YYYY.MM.DD'),
             // createDateOld: created.getFullYear() + '.' + (created.getMonth() + 1) + '.' + (created.getDate() + 1),
             localPath: '/sites/' + items[ arr[i] ].foldername + '/' + ifEmbedded,
-            pdPath: 'http://productdevelopment.techtarget.com/microsites/media.techtarget.com/' + items[ arr[i] ].foldername,
+            pdPath: 'http://productdevelopment.techtarget.com/microsites/media.techtarget.com/' + items[ arr[i] ].foldername + '/' + ifEmbedded,
             previewPath: items[ arr[i] ].urlPreview,
             sitePath: items[ arr[i] ].url
           };
