commented out "release" columns

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <th><i class="icon-th"></i></th>
     <th><i class="icon-star-empty"></i>&nbsp;Site Name</th>
     <th><i class="icon-calendar"></i>&nbsp;Created</th>
-    <th><i class="icon-upload"></i>&nbsp;Releases</th>
-    <th><i class="icon-time"></i>&nbsp;Last Release</th>
+    <!-- git add <th><i class="icon-upload"></i>&nbsp;Releases</th>
+    <th><i class="icon-time"></i>&nbsp;Last Release</th> -->
     <th>Local</th>
     <th>PD</th>
     <th>Preview</th>
@@ -35,10 +35,10 @@
   </tbody>
   </table>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/tablesort/1.6.1/tablesort.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/tablesort/1.6.1/tablesort.min.js"></script>
   <script>
 
     $(document).on('ready', function() {
@@ -71,8 +71,8 @@
                     '<td>{{ num }}</td>' +
                     '<td><a href="{{ localPath }}">{{ name }}</a></td>' +
                     '<td>{{ createDate }}</td>' +
-                    '<td class="releases">{{ releases }}</td>' +
-                    '<td>{{ lastRelease }}</td>' +
+                    // '<td class="releases">{{ releases }}</td>' +
+                    // '<td>{{ lastRelease }}</td>' +
                     '<td class="localSite"><a href="{{ localPath }}"><i class="icon-edit"></i></a></td>' +
                     '<td class="pdSite"><a href="{{ pdPath }}"><i class="icon-share"></i></a></td>' +
                     '<td class="previewSite"><a href="{{ previewPath }}"><i class="icon-check"></i></a></td>' +
@@ -154,9 +154,6 @@
 
       });
 
-    var bar = moment('2012.10.21').format('X')*1000;
-    console.log(bar);
-    console.log( moment( bar ).format('YYYY.MM.DD') );
     });
 
   </script>
