--- a/src/sites/hpservicesemea2/index.html
+++ b/src/sites/hpservicesemea2/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HPServicesEMEA2</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  </head>
-  <body id="edit">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="javascript/script.js"></script>
+  </head>
+  <body id="HPServicesEMEA2">
     <div id="micrositeContainer">
       <div id="micrositeContainerInner">
         <div id="micrositeContainerCompress">
@@ -30,7 +30,92 @@
                 <p>Enterprise applications are the lifeblood of your company; you rely on them to handle everything from your payroll, financial statements to tracking your customers.  HP Enterprise Applications Services  helps you align your enterprise-wide applications to business priorities and operational requirements,  reducing time-to-market, and lowering your total cost of ownership.  Find out how HP can help you  transform your applications and provide business solutions to give you a competitive edge.</p>
               </div>
               <div class="micrositeCustomContainerRight"><img src="images/placeholder1.png"></div>
-              <div class="micrositeMeboxContainer"></div>
+              <div class="featuredVideo">
+                <div class="featuredVideoPlayer">
+                  <object id="givethisplayeranid" class="BrightcoveExperience">
+                    <param name="bgcolor" value="#000000"></param>
+                    <param name="wmode" value="opaque"></param>
+                    <param name="width" value="640"></param>
+                    <param name="height" value="360"></param>
+                    <param name="playerID" value="2045898185001"></param>
+                    <param name="playerKey" value="AQ~~,AAAAAGL7FTI~,KqbVcw7NDYolTatfEGWnMVsFvGToVKp2"></param>
+                    <param name="isVid" value="true"></param>
+                    <param name="isUI" value="true"></param>
+                    <param name="dynamicStreaming" value="true"></param>
+                    <param name="includeAPI" value="true"></param>
+                    <param name="templateLoadHandler" value="brightcovePlayerLoaded"></param>
+                    <param name="templateReadyHandler" value="brightcovePlayerReady"></param>
+                  </object>
+                </div>
+                <div class="featuredVideoPlaylist">
+                  <h3 class="featuredVideoPlaylistHeader">Featured Video</h3>
+                  <ul>
+                    <li data-video-id="2050141491001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_the_future_of_your_business_with_hp_cloud_services.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">The future of your business with HP Cloud Services</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050140601001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_hp_cloud_platform_gives_elders_flexibility.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">HP's Cloud Platform gives Elders flexibility</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050214452001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_hp_key_strength_is_infrastructure.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">HP's Key Strength is Infrastructure</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050137978001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_security_solutions_are_critical.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">Security Solutions are critical</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050137977001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_the_official_opening_of_the_aurora_data_centre_in_australia.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">The Official Opening of the Aurora Data Centre in Australia</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050137982001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_hp_enterprise_security_services_video.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">HP Enterprise Security Services</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050141496001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_drive_growth_with_hp_bpo_services.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">Drive growth with HP BPO Services - Kathy Garcia, Senior Vice-President</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050140600001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_hp_finance_and_administration_overview.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">HP Finance and Administration Overview</h4>
+                        </div>
+                      </div>
+                    </li>
+                    <li data-video-id="2050137981001">
+                      <div class="mediaBlock"><img src="http://cdn.ttgtmedia.com/microsites/hpenterpriseservicessolutionscentre/images/bc_thumb_hp_social_crm_services_video.jpg" alt="">
+                        <div class="mediaBlockContent">
+                          <h4 class="featuredVideoTitle">HP Social CRM Services Video</h4>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
             <div id="micrositeContentColumnLeft">
               <div class="contentTabs">
