--- a/src/sites/hpci2/downloads.html
+++ b/src/sites/hpci2/downloads.html
@@ -93,7 +93,7 @@ var taxNameWithOutSpecialChars='Downloads';
 </script>
 
 
-<link rel="stylesheet" href="http://cdn.ttgtmedia.com/microsites/hpci2/css/style.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
@@ -142,7 +142,7 @@ var networkPopupURL = "http://www.techtarget.com/html/it_pro_list.html";
 
 <!-- END: Google Analytics -->
 
-<script type="text/javascript" src="http://cdn.ttgtmedia.com/microsites/hpci2/javascript/script.js"></script>
+<script type="text/javascript" src="javascript/script.js"></script>
 
 
 <meta name="viewport" content="initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0;"/>
