updates to sites

--- a/sites/dev/ibmsmarterplanetuk/embedded.html
+++ b/sites/dev/ibmsmarterplanetuk/embedded.html
@@ -406,7 +406,7 @@ var networkPopupURL = "/ComputerWeekly/?vgnextfmt=portfolio";
 <div class="micrositeModuleContainer">
 
 
-<p><img src="http://cdn.ttgtmedia.com/microsites/ibmsmarterplanetuk/images/header.jpg"
+<p><img src="http://cdn.ttgtmedia.com/microsites/ibmsmarterplanetuk/images/header.png"
 alt="" /></p>
 </div></div>
 </div></div>
