--- a/sites/dev/hpci2/videos.html
+++ b/sites/dev/hpci2/videos.html
@@ -26,6 +26,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="infrastructure.html">Infrastructure</a></li>
                 <li><a href="cloud.html">Cloud</a></li>
+                <li><a href="ci.html">CI</a></li>
                 <li><a href="servers.html">Servers</a></li>
                 <li><a href="storage.html">Storage</a></li>
                 <li><a href="networking.html">Networking</a></li>
